# xinyu

./: README.md  dcm2quat.ipynb
GCC_pre_c++11/1/: CMakeLists.txt
GCC_pre_c++11/5/: CMakeLists.txt
LeadsenseCapture/src/: capture.cpp  capture_depth.cpp  samplegetimudata.cpp
LeadsenseCapture_raw_nodepth/src/: CMakeLists.txt  capture.cpp
RTS_date_python/: RTS_file_test.py  quat2ang.py
RTS_date_python/husky_nav_20181225/: chage_to_ang.py  husky_误差计算.ipynb  movebase_time.csv  out_plot.csv  waypoint.csv
RTS_date_python/husky_nav_date/: get_waypoint_ang.py
RTS_数据处理/: RTS_py_file_test_raw.py
SDK_capture/LeadsenseCapture_raw/src/: CMakeLists.txt  capture.cpp
SDK_capture/LeadsenseCapture_raw/src/xy/: capture. (copy)cpp
SDK_capture/exe/: LeadsenseCapture  zed_data_capture
SDK_capture/marker_dir/: MarkerDetection.cpp
SDK_capture/zed_capture/: CMakeLists.txt
SDK_capture/zed_capture/src/: main.cpp  main_0.cpp
SDK_depth_get_xinyu/SDK_exe/: leadsense_get_depth  mynt_get_distance  zed_get_depth
SDK_depth_get_xinyu/leadsense_get_depth/: CMakeLists.txt  get_depth.cpp
SDK_depth_get_xinyu/mynt_api/: CMakeLists.txt  MarkerCommon.h  MarkerDetection.cpp  get_distance.cc
SDK_depth_get_xinyu/zed_get_depth/: CMakeLists.txt
SDK_depth_test/SDK_exe/: LeadSense_depth.csv  Motion_data.csv  RealSense_depth.csv  SampleTemp  ZED_Positional_Tracking  Zed_depth.csv  mark_distance  zedtemp
SDK_depth_test/marker_dir/: CMakeLists.txt  MarkerCommon.h  MarkerDetection.h  mark_distance.cpp
SDK_depth_test/mynt_api/: CMakeLists.txt  get_distance.cc
SDK_depth_test/zed_temp/: CMakeLists.txt
TrajectoryContrast/: litao.rar  readme.txt
TrajectoryContrast/1018indoor/: indoor_3.m
TrajectoryContrast/1024outdoor_inout/: outd3.m
TrajectoryContrast/1028indoor/: indoor_3.m  original.m
TrajectoryContrast/mynt_test/: get_time_erro.m  indoor_2_loop.m  mynt_maplab.m  mynt_vins.m  mynt_viorb.m  test.m
TrajectoryContrast/mynt_vicon_20190419/: husky_poses.csv  maplab_mynt_T_G_I.txt  maplab_mynt_T_M_I.txt  mynt_poses.csv
Vicon-BiasEstimate/: CMakeLists.txt  estimator.cpp  main.cpp  parameters.cpp  parameters.h  test_using_different_data
Vicon-BiasEstimate/factor/: VelocityFactor.h  ViconFrame.h  imu_factor.h  imu_factor_new.h  integration_base.h  pose_local_parameterization.cpp  pose_local_parameterization.h  quat_local_parameterization.cpp  quat_local_parameterization.h  rotation_factor.h
Vicon-BiasEstimate/include/: CostFunctor.h  common.h  estimator.h  imudata.h  leicadata.h  vicondata.h
Vicon-BiasEstimate/utility/: AHRS.cpp  AHRS.h  utility.cpp  utility.h
core_python/chapter_2/: tsTcInt3.py  tsTserv.py
data_with_python/: get_2d_3d_picture.ipynb  opencv_undistort.py  out.py  out_data_fix.ipynb  plot_hight.ipynb  rostopic_image_undistort.py  rostopic_to_image.py
data_with_python/.ipynb_checkpoints/: plot_hight-checkpoint.ipynb
data_with_python/husky_nav_20181225/: get_error.py  husky误差分析.ipynb  waypoint.txt
data_with_python/python_tools_20200318/: bag_to_pose_imu.py  bag_to_pose_vrpn.py  bag_to_sensor_multhread.py  bag_to_sensor_multiprocess.py  test.py
dataset_tools_python/: bag_to_mavebase_timestamp.py  bag_to_pose_imu.py  bag_to_pose_odom.py  bag_to_pose_scan.py  bag_to_pose_vrpn_angle.py  bag_to_sensor.py  bag_to_sensor_multhread.py  bag_to_sensor_multiprocess.py  chage_to_ang.py  date_caculate.py  from_eluer_to_quaternion.py  husky_demo_get_pose.py
dataset_tools_python/python_tool_20190911_jujia/: bag_to_image.py  bag_to_image_time.py  bag_to_imu.py  get_vins_path.py  husky_demo_get_pose.py  leica.py  put_vrpn_to_rviz.py
dataset_tools_python/python_tools/: bag_to_image.py  bag_to_pose.py  bag_to_pose_scan.py  bag_to_sensor.py
docker-ubuntu-xfce-vnc-desktop/: Dockerfile
husky_demo/demo_display/: readme.md
husky_demo/demo_husky/: readme.md
husky_demo/rviz/: gmapping.rviz  persistent_settings  temp.rviz  temp_demo.rviz
husky_nav_test/20181218/: Untitled.ipynb  date_result.csv  echo_mb.txt  husky_误差计算.ipynb  mean_out.csv
husky_nav_test/20181219/: date_result.csv  echo_mb.txt  husky_误差计算.ipynb  mean_out.csv  优化代码_1.ipynb
husky_nav_test/20190115/: bag_to_pose_vrpn_angle.py  change_to_ang.py  date_result.csv  echo_mb.txt  get_distance_picture.py  get_error.py  get_picture-Copy1.ipynb  get_picture.ipynb  get_picture.py  map.pgm  map.yaml  mean_out.csv  movebase_time.csv  out_plot.csv  test.py  waypoints.csv  waypoints.txt
husky_nav_test/code_merge/: Untitled.ipynb  date_result.csv  get_error.py  get_picture.py  merge_code.ipynb  out_plot.csv
lidar_camera_calibration/lidar_camera_tlhaveragepoints/src/aruco_mapping/: CMakeLists.txt
lidar_camera_calibration/lidar_camera_tlhaveragepoints/src/aruco_mapping/data/: zed_left_uurmi.ini
lidar_camera_calibration/lidar_camera_tlhaveragepoints/src/aruco_mapping/launch/: aruco_mapping.launch
lidar_camera_calibration/lidar_camera_tlhaveragepoints/src/aruco_mapping/src/: aruco_mapping.cpp
matlab/: read_rosbagV1.m
quanai_ros_car/: README.txt  demo_gmapping.launch
udp_server_client/: udpclient  udpclient.c  udpserver  udpserver.c
仓储机器人/: follower_ros_copy.py  test.py
工作/相机深度图_全站仪_比测/: util(2).py  (+4 more)
(+361 files in other folders)
